2016-12-11  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/symbol.py (MyButton): Changed signal mechanism
	to new PyQt5 signals.

	* Tools/bookentry/mainWindow.py: Changed signal connect to use new
	style signals which is the only mechanism supported in PyQt5.
	Also changed some dialog boxes for new calling sequence.

	* Tools/bookentry/menus.py: Changed signal connect to use new
	style signals which is the only mechanism supported in PyQt5.

	* Tools/ajbbooks: Changed signal connect to use new style signals
	which is the only mechanism supported in PyQt5.

2016-08-07  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/journalWin.py (JournalEntry.printPrinter): Made
	minor changes to journal.

2016-04-11  Jim Fowler  <jrf@biblion>

	* Tools/bookentry/mainWindow.py (BookEntry.saveFileAs): modified
	to use self.bf.getDirName() as the directory to start in.

	* Data/Ajb: Converted all files to XML format and saved with git.

2016-02-07  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/AJBcomments.py (Compilers): Removed ",
	OPTIONAL(WhiteSpace))" from the definition of Compilers.  In the
	situation where the 'compiled by' was the only comment the grammer
	would not recognize it.  This implies that every volume from AJB45
	to AJB68 may have lost compiler date.  Will need to proofread
	these volumes again and look for compiler information. The original
	inclusion of the offending statement occured in the check in of
	2015-05-17 so volumes before this date may not be affected. The
	last file before this date was ajb47_books.txt.  The last file
	with a compiled by entry is ajb57_books.txt

	* Tools/bookentry/xml/bookfile.xsd: modifed personInfo to allow
	minOccurs=0 for 'Last'.  This means that personInfo may not have
	any child elements but was necessary because
	nameparser.HumanName() parses a single word as a first name rather
	than a last name. This behaviour seems to be a feature of
	HumanName.

2016-02-04  Jim Fowler  <jrf@Biblion>
